# ComfyUI_AudioTools

./: AddSubtitlesToVideo.py  MWAudioRecorderAT.py  README-CN.md  README.md  __init__.py  audio_separate.py  audiotoolsnode.py  clearvoicenode.py  extra_help_file.yaml.example  minimal_pause_node.py  pyproject.toml  requirements.txt  string_editor_node.py  stringnodes.py
clearvoice/: __init__.py  networks.py
clearvoice/dataloader/: dataloader.py  meldataset.py  misc.py
clearvoice/models/mossformer2_se/: conv_module.py  fsmn.py  mossformer2.py  mossformer2_block.py
clearvoice/utils/: decode.py
look2hear/layers/: stft_tfgn.py
web/: hierarchicalFileAudioWidget.js  minimal_pause_node.js  save_audio_widget.js  string_editor_node.js  string_pause_gate_node.js  string_viewer_node.js
workflow-examples/: Automatic speech recognition - Automatic translation - Automatic sound cloning - Automatic lip syncing - Automatic subtitle addition.json  字符串编辑.json  录音和移除静音部分.json  暂停工作流.json  添加字幕.json  音频加载.json  音频去噪增强.json  音频水印.json  音频裁切和连接.json  音频调节.json
